fix top spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -31,8 +31,8 @@ body {
 .go-no-go {
   width: 100%;
   text-align: center;
-  padding-top: 30px;
-  margin-bottom: 20px;
+  /*padding-top: 10px;*/
+  /*margin-bottom: 20px;*/
   font-size: 2em;
 }
 
@@ -41,9 +41,9 @@ body {
   justify-content: space-around;
   /*border: 1px dashed black;*/
   flex-wrap: nowrap;
-  align-items: flex-end;
-  padding-top: 15px;
-  padding-bottom: 15px;
+  align-items: center;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 #today-tab .flex-item {
@@ -114,7 +114,7 @@ form {
 
 .day-current-temp {
   font-size: 2rem;
-  padding: 1.2rem;
+  padding: 1.4rem;
 }
 
 .card {
